Safari fixes: prefix AudioContext, remove RegEx lookbehind

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ button {
 
 .pads button {
   width: 16vmin;
+  overflow: hidden;
 }
 
 .empty button,
